--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "start": "tsc && node dist/index.js"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "@graphql-tools/schema": "^10.0.23",
+    "express": "^5.1.0",
+    "express-graphql": "^0.12.0",
+    "graphql": "^16.11.0"
   },
   "devDependencies": {
+    "@graphql-tools/graphql-file-loader": "^8.0.20",
+    "@graphql-tools/load": "^8.1.0",
     "@types/express": "^5.0.3",
     "typescript": "^5.5.3"
   },
