--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@graphql-tools/schema": "^10.0.23",
     "express": "^5.1.0",
     "express-graphql": "^0.12.0",
-    "graphql": "^16.11.0"
+    "graphql": "^16.11.0",
+    "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "@graphql-tools/graphql-file-loader": "^8.0.20",
