--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,14 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "baseUrl": "src",
+    "paths": {
+      "@config/*": ["Config/*"],
+      "@core/*": ["Core/*"],
+      "@infrastructure/*": ["Infrastructure/*"]
+    },
+    "moduleResolution": "node"
   },
-  "include": ["src"]
+  "include": ["src/**/*"]
 }
