Setting dependencies and files to handle migrations

--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "tsc && node dist/index.js"
+    "start": "tsc && npm run create-db && npm run migrate && node dist/index.js",
+    "create-migration": "npx sequelize-cli migration:generate --name",
+    "migrate": "npx sequelize-cli db:migrate",
+    "create-db": "ts-node src/Config/Sequelize/Database/CreateDatabase.ts"
   },
   "dependencies": {
     "@graphql-tools/schema": "^10.0.23",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "express-graphql": "^0.12.0",
     "graphql": "^16.11.0",
@@ -26,7 +30,9 @@
     "@graphql-tools/graphql-file-loader": "^8.0.20",
     "@graphql-tools/load": "^8.1.0",
     "@types/express": "^5.0.3",
+    "@types/pg": "^8.15.4",
     "@types/sequelize": "^4.28.20",
+    "sequelize-cli": "^6.6.3",
     "typescript": "^5.5.3"
   },
   "private": true
