--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "tsc && npm run create-db && npm run migrate && node dist/index.js",
+    "dev": "tsc && node dist/index.js",
     "create-migration": "npx sequelize-cli migration:generate --name",
     "migrate": "npx sequelize-cli db:migrate",
     "create-db": "ts-node src/Config/Sequelize/Database/CreateDatabase.ts"
@@ -19,7 +20,8 @@
     "module-alias": "^2.2.3",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "ts-node": "^10.9.2"
   },
   "_moduleAliases": {
     "@config": "dist/Config",
